# retrocropper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make_release
hw/Rev. A/: Bom - partial.txt
src/: main.c  nvm.c  nvm.h
